--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },"engines": {
+    "npm":"6.14.4",
+    "node":"12.16.3"
   }
 }
